Fix build command for production deployment

--- a/render.yaml
+++ b/render.yaml
@@ -5,8 +5,8 @@ services:
     name: mini-netflix-backend
     env: node
     plan: free
-    buildCommand: npm install && npm run build
-    startCommand: npm run start:prod
+    buildCommand: npm install && npx nest build
+    startCommand: node dist/main
     envVars:
       - key: NODE_ENV
         value: production
